crates/templates/tests/snapshots/root__function_template-2.snap
---
source: crates/templates/tests/root.rs
description: Function with no lines
expression: output
---
root() {
  # Parse command arguments
  parse_root "$@"

  echo "No implementation body found for root function"
}
