crates/templates/tests/snapshots/root__function_template-4.snap
---
source: crates/templates/tests/root.rs
description: Function with custom-usage rule
expression: output
---
root() {
  # Parse command arguments
  parse_root "$@"

  echo "No implementation body found for root function"
}
