crates/templates/tests/snapshots/root__function_template-9.snap
---
source: crates/templates/tests/root.rs
description: Function with global default option
expression: output
---
root() {
  local rargs_default

  # Parse command arguments
  parse_root "$@"

  if [[ -z "$rargs_default" ]]; then
    rargs_default="foo"
  fi
  echo "No implementation body found for root function"
}
