crates/templates/tests/snapshots/root__impl-10.snap
---
source: crates/templates/tests/root.rs
description: Function with local default option
expression: output
---
root() {
  # Parse command arguments
  parse_root "$@"

  
  if [[ -z "${args['default']}" ]]; then
    args['default']="foo"
  fi
  echo "No implementation body found for root function"
}


